--- a/README.mkd
+++ b/README.mkd
@@ -1,43 +1,38 @@
-# eastcave Dot Files
+# westcave Dot Files
 
 These are the configuration files I want to have in every Linux box I use.
 
+Original files copied from jdevera/dotfiles. As these are highly preferential,
+I don't recommend a fork.
+
 ## Installation
 
-Installation instructions come first because it is what I need most of the
-time, but if you are not me, please read on :) 
-
-    git clone git://github.com/eastcave/dotfiles ~/.dotfiles
+    git clone git://github.com/westcave/dotfiles ~/.dotfiles
     cd ~/.dotfiles
     bash install
 
 
 ## Contents
 
-Most files handle Bash or Vim configuration, but I also share my settings for
-GNU Screen and Git.
-
-My git configuration file is actually a generator (more on this below).
-
-My Vim configuration directory includes all the plug-ins I have installed.
+Most files handle Bash or Vim configuration, additional files for utilities
+such as GNU Screen and Git.
 
 ### Configuration file generators
 
 There are some configuration files, such as _.gitconfig_ that might contain
 sensitive data or that have contents that vary across different machines. For
-these cases, I don't directly store the configuration file, but a generator
-for it.
+these cases, a generator is used. 
 
-These generators very are simple bash scripts that contain a template for the
+These generators are simple bash scripts containing a template for the
 file they generate. The values for variable fields are requested during
 execution or they can be provided with environment variables for unattended
 installation.
 
 ### Bash configuration
 
-My bash configuration files live in the _.bash.d_ directory.
+bash configuration files live in the _.bash.d_ directory.
 
-My _.bashrc_. sources configuration files in this order:
+_.bashrc_. sources configuration files in this order:
 
  * Every file under _.bash.d/local/before_
  * Every file under _.bash.d_
@@ -48,17 +43,20 @@ add configuration files that are specific for the current machine.
 
 ### Vim configuration
 
-I am using [Gmarik's Vundle](https://github.com/gmarik/vundle) Vim plug-in to
-manage my Vim add-ons and keep them up to date.
+Using [Gmarik's Vundle](https://github.com/gmarik/vundle) Vim plug-in to
+manage Vim add-ons and keep them up to date.
 
-With Vundle, I only have to point, in my _.vimrc_ file, to the git
-repositories of all the Vim add-ons I want to have installed and it takes care
-or the rest. Vundle clones each add-on under its own directory and adds it to
+Vundle clones each add-on under its own directory and adds it to
 Vim's runtime path.
 
 All add-ons in the official Vim's website are actively mirrored in github by
 the [Vim-Scripts.org](http://vim-scripts.org/) project. This means Vundle can
 be used to install any add-on published in the official site.
+
+Use command :BundleInstall! inside vim to update all plug-ins. 
+
+### Utility Bash scripts
+Put them in bin
 
 <!--
 vim:linebreak:textwidth=78:spell:
