--- a/README.mkd
+++ b/README.mkd
@@ -1,13 +1,13 @@
-# westcave Dot Files
+# payneio Dot Files
 
 These are the configuration files I want to have in every Linux box I use.
 
-Original files copied from jdevera/dotfiles. As these are highly preferential,
+Original files copied from jdevera/dotfiles. As these are highly opinionated,
 I don't recommend a fork.
 
 ## Installation
 
-    git clone git://github.com/westcave/dotfiles ~/.dotfiles
+    git clone git://github.com/payneio/dotfiles ~/.dotfiles
     cd ~/.dotfiles
     bash install
 
