Add an ubuntu_post_install script that takes care of setting up solarized color scheme in gnu terminal.

--- a/README.mkd
+++ b/README.mkd
@@ -11,6 +11,10 @@ I don't recommend a fork.
     cd ~/.dotfiles
     bash install
 
+## A few more things to do on initial install
+
+  On an ubuntu box, set up solarized color theme using:
+  ./ubuntu_post_install
 
 ## Contents
 
